--- a/index.ipynb
+++ b/index.ipynb
@@ -80,9 +80,11 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "mode": "line",
+         "mode": "lines",
          "name": "RSS with changes to y-intercept",
          "text": [],
+         "type": "scatter",
+         "uid": "4637f822-14ef-11e9-8b3d-1b6279df4cfc",
          "x": [
           70,
           80,
@@ -108,10 +110,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"8180eb52-f077-432f-94c4-0c0c08f25f9d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8180eb52-f077-432f-94c4-0c0c08f25f9d\", [{\"x\": [70, 80, 90, 100, 110, 120, 130, 140], \"y\": [10852, 9690, 9128, 9166, 9804, 11042, 12880, 15318], \"mode\": \"line\", \"name\": \"RSS with changes to y-intercept\", \"text\": []}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"ccb30bc3-0b95-4e46-926d-346a0b404ea2\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ccb30bc3-0b95-4e46-926d-346a0b404ea2\", [{\"mode\": \"lines\", \"name\": \"RSS with changes to y-intercept\", \"text\": [], \"x\": [70, 80, 90, 100, 110, 120, 130, 140], \"y\": [10852, 9690, 9128, 9166, 9804, 11042, 12880, 15318], \"type\": \"scatter\", \"uid\": \"4660ef98-14ef-11e9-8b3d-1b6279df4cfc\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"8180eb52-f077-432f-94c4-0c0c08f25f9d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8180eb52-f077-432f-94c4-0c0c08f25f9d\", [{\"x\": [70, 80, 90, 100, 110, 120, 130, 140], \"y\": [10852, 9690, 9128, 9166, 9804, 11042, 12880, 15318], \"mode\": \"line\", \"name\": \"RSS with changes to y-intercept\", \"text\": []}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"ccb30bc3-0b95-4e46-926d-346a0b404ea2\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ccb30bc3-0b95-4e46-926d-346a0b404ea2\", [{\"mode\": \"lines\", \"name\": \"RSS with changes to y-intercept\", \"text\": [], \"x\": [70, 80, 90, 100, 110, 120, 130, 140], \"y\": [10852, 9690, 9128, 9166, 9804, 11042, 12880, 15318], \"type\": \"scatter\", \"uid\": \"4660ef98-14ef-11e9-8b3d-1b6279df4cfc\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -442,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
